<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/resauto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".KickerInsert">
    <item android:id="@+id/addplayer_menu" android:title="@string/addplayer_menu"
        android:orderInCategory="3" app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/currentgame_menu" android:title="@string/currentgame_menu"
        android:orderInCategory="1" app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_info_details" />
    <item android:id="@+id/players_ranking" android:title="@string/players_ranking"
        android:orderInCategory="5" app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_sort_by_size" />
    <item android:id="@+id/restartgame_menu" android:title="@string/restartgame_menu"
        android:orderInCategory="2" app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_rotate" />
</menu>