<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".KickerInsert">
    <item android:id="@+id/addplayer_menu" android:title="@string/addplayer_menu"
        android:orderInCategory="3" app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/refresh_menu" android:title="@string/refresh_menu"
        android:orderInCategory="2" app:showAsAction="ifRoom"
        android:icon="@android:drawable/stat_notify_sync" />
    <item android:id="@+id/currentgame_menu" android:title="@string/currentgame_menu"
        android:orderInCategory="1" app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_info_details" />
</menu>
